[package]
name = "BetterBrightness"
version = "1.2.0"
edition = "2021"

[dependencies]
android_logger = { version = "0.15.0", default-features = false }
clear-cache = "0.1.3"
ctor = "0.4.1"
libc = "0.2.159"
log = "0.4.22"
region = "3.0.2"

[profile.release]
panic = "abort"

[profile.githubci]
inherits = "release"
strip = true
lto = true
codegen-units = 1
debug = false
panic = "abort"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.1.24"

[target.'cfg(windows)'.dependencies]
minhook-sys = "0.1.1"
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_System_SystemServices", "Win32_System_LibraryLoader", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_System_SystemInformation"] }